--- a/pages/vi/step6.html
+++ b/pages/vi/step6.html
@@ -288,8 +288,8 @@
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">XEM KẾT QUẢ</a></li>
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">ĐIỀU KHOẢN SỬ DỤNG</a></li>
-                    <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=dang-ky-giai-ngan">LIÊN HỆ</a></li>
-                    <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=dang-ky-giai-ngan">MESSENGER</a></li>
+                    <li><a class="dropdown-item" href="https://zalo.me/84777982144">LIÊN HỆ</a></li>
+                    <li><a class="dropdown-item" href="https://zalo.me/84777982144">MESSENGER</a></li>
                 </ul>
             </div>
         </div>
@@ -337,7 +337,7 @@
             <a href="https://shinhan.com.vn/vi/page/sitemap-2.html">Sitemap</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Trung tâm bảo mật</a> |
             <a href="https://online.shinhan.com.vn/global.shinhan">Demo Ngân hàng trực tuyến</a> |
-            <a href="https://chatbot.zalo.me/ref/3188631486358378579?id=dang-ky-giai-ngan">Liên hệ</a> |
+            <a href="https://zalo.me/84777982144">Liên hệ</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/global-shinhan.html">Trang Global Portal</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a>
         </div>
