--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                         <div class="li-w"><a href="https://trum1212.github.io/shinhanbank/pages/vi/chi-nhanh-gan-nhat.html" class="a-text">Điểm Giao Dịch, ATM & STM</a></div>
                         <div class="li-w"><a href="https://shinhancareer.com/" target="_blank" class="a-text">Tuyển Dụng</a></div>
                         <div class="li-w"><a href="https://zalo.me/84777982144" class="a-text">Liên Hệ</a></div>
-                        <div class="li-w"><a href="https://chatbot.zalo.me/ref/84777982144" class="a-text">Trung Tâm Hỗ Trợ</a></div>
+                        <div class="li-w"><a href="https://zalo.me/84777982144" class="a-text">Trung Tâm Hỗ Trợ</a></div>
                         <div class="search">
                             <input type="text" placeholder="Search here...">
                             <i><img src="https://shinhan.com.vn/public/themes/shinhan/img/i_search2.png" alt=""></i>
@@ -445,8 +445,8 @@
                             </div>
                             <a href="/pages/vi/chi-nhanh-gan-nhat.html" class="link">Điểm Giao Dịch, ATM & STM</a>
                             <a href="https://shinhancareer.com/" target="_blank" class="link">Tuyển Dụng</a>
-                            <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung" class="link">Liên Hệ</a>
-                            <a href="https://chatbot.zalo.me/ref/84777982144id=tin-nhan-chao-mung" class="link">Trung Tâm Hỗ Trợ</a>
+                            <a href="https://zalo.me/84777982144" class="link">Liên Hệ</a>
+                            <a href="https://zalo.me/84777982144" class="link">Trung Tâm Hỗ Trợ</a>
                             <div class="lang">
                                 <a hreflang="en" href="https://shinhan.com.vn/en/personal/consumer-loan.html" class="language"><span>en</span></a>
                             </div>
@@ -524,7 +524,7 @@
                                         </div>
                                     </div>
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung">Thông Tin Liên Hệ</a></h3>
+                                        <h3 class="t-blue"><a href="https://zalo.me/84777982144">Thông Tin Liên Hệ</a></h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -761,7 +761,7 @@
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/corporate/ngan-hang-dien-tu-3.html" class="sub-item-">Ngân Hàng Điện Tử</a>
                                             <a href="https://shinhan.com.vn/vi/corporate/dich-vu-sms.html" class="sub-item-">Dịch Vụ SMS</a>
-                                            <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung" class="sub-item-">Đường Dây Nóng</a>
+                                            <a href="https://zalo.me/84777982144" class="sub-item-">Đường Dây Nóng</a>
                                             <a href="https://shinhan.com.vn/vi/corporate/cms-2.html" class="sub-item-">CMS</a>
                                         </div>
                                     </div>
@@ -977,7 +977,7 @@
                         <h3 class="title-blue">Dịch Vụ Hỗ Trợ</h3>
                         <div class="list-support">
                             <div class="box-support">
-                                <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung">
+                                <a href="https://zalo.me/84777982144">
                                     <div class="head"><i class="icon branches" style="margin-top:0;"></i></div>
                                     <div class="body"><p>Chi Nhánh Gần Nhất</p></div>
                                 </a>
@@ -989,7 +989,7 @@
                                 </a>
                             </div>
                             <div class="box-support">
-                                <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung">
+                                <a href="https://zalo.me/84777982144">
                                 <div class="head"><i class="icon phone"></i></div>
                                 <div class="body"><p><a href="tel:19008198">1900 8198</a></p></div>
                             </div>
@@ -1032,7 +1032,7 @@
                                 <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
                                 <div class="text-w">
                                     <h4>Contact center 24/7</h4>
-                                    <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung" class="num-phone">Hỗ Trợ</a>
+                                    <a href="https://zalo.me/84777982144" class="num-phone">Hỗ Trợ</a>
                                 </div>
                             </div>
                             <div class="email col-md-7 col-sm-12 col-xs-12">
@@ -1048,7 +1048,7 @@
                                 <div class="icon"><i class="fa fa-question" aria-hidden="true"></i></div>
                                 <div class="text-w">
                                     <h4>Trung Tâm Hỗ Trợ</h4>
-                                    <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung">Nhấn vào đây</a>
+                                    <a href="https://zalo.me/84777982144">Nhấn vào đây</a>
                                 </div>
                             </div>
                         </div>
@@ -1075,7 +1075,7 @@
                                 <p>Theo dõi thêm tại</p>
                                 <div class="icon-w">
                                     <a href="https://zalo.me/849777982144" target="_blank" class="icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    <a href="https://chatbot.zalo.me/ref/84777982144?id=tin-nhan-chao-mung" target="_blank" class="icon"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                                    <a href="https://zalo.me/84777982144" target="_blank" class="icon"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                                 </div>
                                 <div class="divide">|</div>
                                 <div class="btn-main yellow">
